# synapse_qualisys_bridge

./: .gitignore  .gitmodules  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  release.yml
docs/: qualisys-qtm-sim-ci-requirements.md  release-process.md
packaging/windows/: bridge.toml  synapse-qualisys-bridge.iss
scripts/: ci.sh
src/: main.rs
src/estimator/: mod.rs
src/web/: app.css  app.js  index.html
tests/e2e/: bridge-live.spec.js  playwright.config.js
