[package]
name = "synapse_qualisys_bridge"
version = "0.1.0"
edition = "2024"
description = "Qualisys QTM RT to Synapse FlatBuffers over Zenoh bridge"
license = "MIT OR Apache-2.0"

[[bin]]
name = "synapse-qualisys-bridge"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive", "env"] }
flatbuffers = "=25.12.19"
qualisys_rust_sdk = { path = "../qualisys_rust_sdk" }
synapse_fbs = "0.1.1"
thiserror = "2.0"
zenoh = "1.9"
