[package]
name = "synapse_qualisys_bridge"
version = "0.5.0"
edition = "2024"
description = "Qualisys QTM RT to Synapse FlatBuffers over Zenoh bridge"
license = "MIT OR Apache-2.0"
repository = "https://github.com/CogniPilot/synapse_qualisys_bridge"

[[bin]]
name = "synapse-qualisys-bridge"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive", "env"] }
flatbuffers = "=25.12.19"
qualisys_rust_sdk = { path = "../qualisys_rust_sdk" }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
synapse_fbs = "0.8.0"
thiserror = "2.0"
tiny_http = "0.12"
toml = "0.8"
ureq = { version = "2.12", features = ["json"] }
zenoh = "1.9"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
] }
